--- a/.gitIgnore
+++ b/.gitIgnore
@@ -1,6 +1,7 @@
 # Created by .ignore support plugin (hsz.mobi)
 #custom
 .DS_Store
+output/
 ### Python template
 # Byte-compiled / optimized / DLL files
 __pycache__/
